--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <header class = "header">
-    <div class = "euro">EURO:</div>
-    <div class ="dollar">Dollar: </div> 
+    <div class = "euro">EURO: {{euro}}</div>
+    <div class ="dollar">Dollar: {{dollar}}</div> 
 </header>
