--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -1,5 +1,13 @@
+
+.title 
+    text-align: center
+    font-style: 22px
+    
 .header 
+    margin-top: 10px
     display: flex
+    border: 1px solid black
+    padding: 10px
     &__item
-        margin: 0 aut0
-        
+        margin: 0 auto
+
