--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+html 
+    background: url("assets/bg.jpg")  center (center / cover) no-repeat 
+    margin:0px
+    height:100%
+    width:100%
+    -webkit-background-size:cover
+    -o-background-size:cover
+    -moz-background-size:cover
+    background-size:cover
