--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,8 @@
+<h2 class="title">
+    Header
+</h2>
+
 <header class = "header">
-    <div class = "euro">EURO: {{euro}}</div>
-    <div class ="dollar">Dollar: {{dollar}}</div> 
+    <div class = "header__item" id = "eur">EURO: {{euro}}</div>
+    <div class ="header__item" id = "usd">Dollar: {{dollar}}</div> 
 </header>
