--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,6 @@
 </h2>
 
 <header class = "header">
-    <div class = "header__item" id = "eur">EURO: {{euro}}</div>
+    <div class = "header__item" id = "eur">Euro: {{euro}}</div>
     <div class ="header__item" id = "usd">Dollar: {{dollar}}</div> 
 </header>
